front: socket & profile add image field

--- a/front/src/app/modules/main/components/profile-part/profile-part.component.css
+++ b/front/src/app/modules/main/components/profile-part/profile-part.component.css
@@ -1,3 +1,15 @@
+.profile-form .upload-file {
+  margin-bottom: 10px; }
+.profile-form .profile-buttons {
+  max-width: 150px;
+  margin: 0 auto; }
+.profile-form input {
+  width: 100% !important; }
 
+.upload-file {
+  display: flex;
+  justify-content: center; }
+  .upload-file input[type="file"] {
+    display: none !important; }
 
-/*# sourceMappingURL=chat-dashboard.component.css.mapmap */
+/*# sourceMappingURL=profile-part.component.css.map */
