--- a/front/src/app/modules/main/components/profile-part/profile-part.component.html
+++ b/front/src/app/modules/main/components/profile-part/profile-part.component.html
@@ -68,24 +68,28 @@
                         </div>
                     </div>
 
-                        <!--<div [class]="form-group">-->
-                            <!--<input type="file"-->
-                                   <!--class="form-control"-->
-                                   <!--id="avatar"-->
-                                   <!--#avatar-->
-                                   <!--placeholder="update avatar"-->
-                                   <!--formControlName="picture">-->
-                        <!--</div>-->
+                        <div class="upload-file">
+                            <div class="avatar"
+                                 (click)="uploadPicture.click()"
+                                [innerHtml]="user.getPicture()"></div>
 
-                    <div class="text-center">
-                        <button class="btn btn-style btn-sm"
+                            <input type="file"
+                                   (change)="loadFile($event, profilePicture)"
+                                   #uploadPicture>
+                        </div>
+
+                    <div class="btn-group d-flex justify-content-between profile-buttons">
+                        <button class="btn btn-style btn-sm d-flex"
                                 type="submit">Save</button>
+                        <button class="btn btn-style btn-sm d-flex"
+                                (click)="onCancel()">Cancel</button>
                     </div>
                 </form>
             </div>
 
             <div class="btn-group-sm pull-right">
                 <button class="btn btn-style"
+                        *ngIf="!profileFormContainer"
                         [innerText]="profileBtn"
                         (click)="onChangeProfile()"> <fa-icon [icon]="faUser"></fa-icon>Add Profile</button>
             </div>
