--- a/front/src/app/modules/main/components/profile-part/profile-part.component.scss
+++ b/front/src/app/modules/main/components/profile-part/profile-part.component.scss
@@ -1,3 +1,21 @@
 
 .profile-form{
+  .upload-file{
+    margin-bottom: 10px;
+  }
+  .profile-buttons{
+    max-width: 150px;
+    margin: 0 auto;
+  }
+  input{
+    width: 100%!important;
+  }
+}
+
+.upload-file{
+  display: flex;
+  justify-content: center;
+  input[type="file"]{
+    display: none!important;
+  }
 }
