front: profile change

--- a/front/src/app/modules/main/components/search/search.component.css
+++ b/front/src/app/modules/main/components/search/search.component.css
@@ -25,4 +25,4 @@
 .side-panel {
   padding-bottom: 40px; }
 
-/*# sourceMappingURL=search.component.css.map
+/*# sourceMappingURL=search.component.cssp */
