--- a/front/src/app/modules/main/components/contact-panel/contact-panel.component.html
+++ b/front/src/app/modules/main/components/contact-panel/contact-panel.component.html
@@ -1,8 +1,8 @@
 <div id="contacts" class="list-contacts">
-  <div class="group-btn contact-bar d-flex w-100">
-    <button (click)="onAddChat()"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Add chat</span></button>
-    <!--<button (click)="onAddContact()"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add chat</span></button>-->
-  </div>
+  <!--<div class="group-btn contact-bar d-flex w-100">-->
+    <!--<button (click)="onAddChat()"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Add chat</span></button>-->
+    <!--&lt;!&ndash;<button (click)="onAddContact()"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add chat</span></button>&ndash;&gt;-->
+  <!--</div>-->
   <ul>
     <li
         #li
