--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -153,42 +153,43 @@ body {
     outline: none;
     background: #435f7a;
 }
-#frame #sidepanel #search {
+.search-container {
     border-top: 1px solid #32465a;
     border-bottom: 1px solid #32465a;
     font-weight: 300;
 }
 @media screen and (max-width: 735px) {
-    #frame #sidepanel #search {
+    .search-container {
         display: none;
     }
 }
-#frame #sidepanel #search label {
+.search-container label {
     position: absolute;
     margin: 10px 0 0 20px;
 }
-#frame #sidepanel #search input {
+.search-container input {
     font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
     padding: 10px 0 10px 46px;
-    width: calc(100% - 25px);
+    /*width: calc(100% - 25px);*/
+    width: 100%;
     border: none;
     background: #32465a;
     color: #f5f5f5;
 }
-#frame #sidepanel #search input:focus {
+.search-container input:focus {
     outline: none;
     background: #435f7a;
 }
-#frame #sidepanel #search input::-webkit-input-placeholder {
+.search-container input::-webkit-input-placeholder {
     color: #f5f5f5;
 }
-#frame #sidepanel #search input::-moz-placeholder {
+.search-container input::-moz-placeholder {
     color: #f5f5f5;
 }
-#frame #sidepanel #search input:-ms-input-placeholder {
+.search-container input:-ms-input-placeholder {
     color: #f5f5f5;
 }
-#frame #sidepanel #search input:-moz-placeholder {
+.search-container input:-moz-placeholder {
     color: #f5f5f5;
 }
 .list-contacts {
