--- a/front/src/app/modules/main/components/chat-panel/components/chat-head/chat-head.component.html
+++ b/front/src/app/modules/main/components/chat-panel/components/chat-head/chat-head.component.html
@@ -11,11 +11,11 @@
         </div>
     </div>
 
-    <div class="social-media d-flex align-items-center">
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
-    </div>
+    <!--<div class="social-media d-flex align-items-center">-->
+        <!--<i class="fa fa-facebook" aria-hidden="true"></i>-->
+        <!--<i class="fa fa-twitter" aria-hidden="true"></i>-->
+        <!--<i class="fa fa-instagram" aria-hidden="true"></i>-->
+    <!--</div>-->
 
     <div class="d-flex align-items-center">
         <auth-panel></auth-panel>
