front: guest change text

--- a/front/src/app/modules/guest/components/home-part/home-part.component.html
+++ b/front/src/app/modules/guest/components/home-part/home-part.component.html
@@ -20,9 +20,9 @@
 
             <div class="col-sm-12">
                 <div class="home-instruction">
-                    <span class="title">Інструкція</span>
-                    <p>Авторизуйтесь для продовження роботи.</p>
-                    <p>Далі все найцікавіше...</p>
+                    <span class="title">Welcome</span>
+                    <p>Log in to continue.</p>
+                    <p>Next all the most interesting ...</p>
                 </div>
             </div>
         </div>
